--- a/LogeoRespuesta.html
+++ b/LogeoRespuesta.html
@@ -17,7 +17,8 @@
     </center>
     <br>
     <center>
-        <img src="Imágenes/Imagen1.png" alt="" width="70%" >
+        <img src="Imágenes/Comparación-de-consolas.jpg" alt="" width="70%" >
+        
     </center>
    
     
