--- a/LogeoRespuesta.html
+++ b/LogeoRespuesta.html
@@ -20,7 +20,9 @@
         <img src="Imágenes/Comparación-de-consolas.jpg" alt="" width="70%" >
         
     </center>
-   
+      <center>
+        <a style="color:black;" href="index.html"> Página Principal </a>
+    </center>
     
 </body>
 </html>
