--- a/LogeoRespuesta.html
+++ b/LogeoRespuesta.html
@@ -17,7 +17,7 @@
     </center>
     <br>
     <center>
-        <img src="Imágenes/840_560.jpg" alt="" width="70%" >
+        <img src="imágenes/portada/840_560.jpg" alt="" width="70%" >
         
     </center>
       <center>
